--- a/Supervised Learning/Classification/random-forest.ipynb
+++ b/Supervised Learning/Classification/random-forest.ipynb
@@ -9,9 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\mia.jensen\\Anaconda3\\envs\\Python_3_11_3\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import kagglehub\n",
     "\n",
@@ -30,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -502,23 +511,14 @@
     }
    ],
    "source": [
-    "#train model\n",
-    "\n",
-    "model = RandomForestClassifier(\n",
-    "    max_depth=None,\n",
-    "    min_samples_split=5,\n",
-    "    n_estimators=50,\n",
-    "    random_state=42\n",
-    ")\n",
-    "model.fit(X_train, y_train)\n",
-    "\n",
-    "y_pred = model.predict(X_val)\n",
+    "best_model = grid_search.best_estimator_\n",
+    "y_pred = best_model.predict(X_val)\n",
     "print(\"Accuracy:\", accuracy_score(y_val, y_pred))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +533,7 @@
     }
    ],
    "source": [
-    "importances = model.feature_importances_\n",
+    "importances = best_model.feature_importances_\n",
     "feature_names = X_train.columns \n",
     "feature_importances = pd.Series(importances, index=feature_names).sort_values(ascending=False)\n",
     "feature_importances.plot(kind=\"bar\")\n",
