--- a/Supervised Learning/Classification/neural-network-sentiment-analysis-1.ipynb
+++ b/Supervised Learning/Classification/neural-network-sentiment-analysis-1.ipynb
@@ -4,13 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Bidirectional LSTM (Long Short Term Memory) Using Tensorflow\n",
-    "### Sentiment Analysis"
+    "# Bidirectional LSTM (Long Short Term Memory)\n",
+    "### Sentiment Analysis - Concept Walkthrough"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
