--- a/Supervised Learning/Classification/nn.ipynb
+++ b/Supervised Learning/Classification/nn.ipynb
@@ -1426,7 +1426,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python_3_11_11",
    "language": "python",
    "name": "python3"
   },
@@ -1440,7 +1440,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
