--- a/Supervised Learning/Classification/nn-cnn-mnist.ipynb
+++ b/Supervised Learning/Classification/nn-cnn-mnist.ipynb
@@ -602,7 +602,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python_3_12_9",
+   "display_name": "Python_3_11_11",
    "language": "python",
    "name": "python3"
   },
@@ -616,7 +616,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
