--- a/Supervised Learning/Classification/nn-cnn-cifar-10.ipynb
+++ b/Supervised Learning/Classification/nn-cnn-cifar-10.ipynb
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -662,7 +662,19 @@
       "Epoch 3/10\n",
       "\u001b[1m782/782\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m92s\u001b[0m 118ms/step - accuracy: 0.8143 - loss: 0.5390 - val_accuracy: 0.8575 - val_loss: 0.4121\n",
       "Epoch 4/10\n",
-      "\u001b[1m345/782\u001b[0m \u001b[32m━━━━━━━━\u001b[0m\u001b[37m━━━━━━━━━━━━\u001b[0m \u001b[1m45s\u001b[0m 104ms/step - accuracy: 0.8228 - loss: 0.5082"
+      "\u001b[1m782/782\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m91s\u001b[0m 116ms/step - accuracy: 0.8238 - loss: 0.5101 - val_accuracy: 0.8569 - val_loss: 0.4213\n",
+      "Epoch 5/10\n",
+      "\u001b[1m782/782\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m90s\u001b[0m 116ms/step - accuracy: 0.8276 - loss: 0.4999 - val_accuracy: 0.8618 - val_loss: 0.3955\n",
+      "Epoch 6/10\n",
+      "\u001b[1m782/782\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m91s\u001b[0m 116ms/step - accuracy: 0.8316 - loss: 0.4905 - val_accuracy: 0.8596 - val_loss: 0.4082\n",
+      "Epoch 7/10\n",
+      "\u001b[1m782/782\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m91s\u001b[0m 117ms/step - accuracy: 0.8344 - loss: 0.4849 - val_accuracy: 0.8591 - val_loss: 0.4069\n",
+      "Epoch 8/10\n",
+      "\u001b[1m782/782\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m91s\u001b[0m 116ms/step - accuracy: 0.8379 - loss: 0.4738 - val_accuracy: 0.8639 - val_loss: 0.3898\n",
+      "Epoch 9/10\n",
+      "\u001b[1m782/782\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m91s\u001b[0m 116ms/step - accuracy: 0.8376 - loss: 0.4692 - val_accuracy: 0.8639 - val_loss: 0.3906\n",
+      "Epoch 10/10\n",
+      "\u001b[1m782/782\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m91s\u001b[0m 116ms/step - accuracy: 0.8430 - loss: 0.4606 - val_accuracy: 0.8609 - val_loss: 0.3945\n"
      ]
     }
    ],
